# sicar-data-syncer

./: .dockerignore  .gitignore  README.md  compose.yml  pyproject.toml
.github/workflows/: task.yml
docker/: Dockerfile
src/: main.py
src/scripts/: download.py  hello_world.py  transformations.py
