[project]
name = "car-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "geopandas>=1.1.2",
    "paddleocr>=3.4.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "sicar",
]

[tool.uv.sources]
sicar = { git = "https://github.com/urbanogilson/SICAR.git" }
